--- a/css/calendar.core.css
+++ b/css/calendar.core.css
@@ -91,6 +91,7 @@ td:focus {
 }
 
 .modal-content {
+    position: relative;
     background-color: white;
     margin: 10% auto;
     padding: 20px;
