--- a/css/calendar.variables.css
+++ b/css/calendar.variables.css
@@ -51,4 +51,14 @@
     --greyscale-border-color: #e0e0e0;
     --greyscale-hover-color: #ddd;
     --greyscale-current-day-bg: #e6e6e6;
+
+    /* Cherry Garden - Improved */
+    --cherry-garden-primary-color: #f06292; /* Main pink */
+    --cherry-garden-secondary-color: #ba68c8;
+    --cherry-garden-hover-color: #d81b60;
+    --cherry-garden-border-color: #f8bbd0;
+    --cherry-garden-text-color: #4a148c;
+    --cherry-garden-background-color: #fce4ec;
+    --cherry-garden-event-marker-color: #c2185b;
+    --cherry-garden-event-marker-hover: #9c27b0;
 }
