--- a/css/calendar.variables.css
+++ b/css/calendar.variables.css
@@ -61,4 +61,16 @@
     --cherry-garden-background-color: #fce4ec;
     --cherry-garden-event-marker-color: #c2185b;
     --cherry-garden-event-marker-hover: #9c27b0;
+
+    /* Deep Forest */
+    --deep-forest-primary-color: #228B22; /* Forest Green */
+    --deep-forest-secondary-color: #90EE90; /* Light Green */
+    --deep-forest-text-color: #2b3a29; /* Deep Green */
+    --deep-forest-background-color: #0b0c0b; /* Soft Mint */
+    --deep-forest-hover-color: #c1f09d;
+    --deep-forest-border-color: #dcedc1; 
+    --deep-forest-shadow-color: rgba(0, 0, 0, 0.15);
+    --deep-forest-current-day-bg: #808000; 
+    --deep-forest-event-marker-color: #ff6f61; /* Coral */
+    --deep-forest-event-marker-hover: #e63946; /* Red */ 
 }
