--- a/css/calendar.variables.css
+++ b/css/calendar.variables.css
@@ -118,4 +118,12 @@
     --neon-nights-event-marker-hover: #ff1493;
     /* Deep Neon Pink */
 
+    /* Desert Mirage */
+    --desert-mirage-primary-color: #c19a6b;
+    --desert-mirage-secondary-color: #d2b48c;
+    --desert-mirage-hover-color: #b8860b;
+    --desert-mirage-border-color: #e0c9a6;
+    --desert-mirage-text-color: #5c3d2e;
+    --desert-mirage-background-color: #f4e1c9;
+
 }
