tropical sunset theme

--- a/css/calendar.variables.css
+++ b/css/calendar.variables.css
@@ -254,4 +254,12 @@
     --steel-shadows-event-marker-color: #707881;  /* Polished Iron */
     --steel-shadows-event-marker-hover: #a8adb5;  /* Soft Metallic Tint */
 
+    /* Tropical Sunset */
+    --tropical-sunset-primary-color: #ff7e5f;
+    --tropical-sunset-secondary-color: #feb47b;
+    --tropical-sunset-hover-color: #ff6f61;
+    --tropical-sunset-border-color: #ffd3b6;
+    --tropical-sunset-text-color: #4a2c2a;
+    --tropical-sunset-background-color: #ffccbc;
+
 }
